Fixing the mobile logo size and fixing the typefont logo so it's not missaligned

--- a/site-sass/brennan/site.header.scss
+++ b/site-sass/brennan/site.header.scss
@@ -14,9 +14,7 @@ header{
 
 
         img {
-
-            width: 250px;
-
+            width: 225px;
         }
 
 	}
@@ -27,8 +25,8 @@ header{
         display: flex;
 				height: 94px;
 				position: absolute;
-				top: 31px;
-				left: 290px;
+				top: 0px;
+				left: 250px;
 				z-index: 0;
 
         h1 {
