--- a/style.css
+++ b/style.css
@@ -1086,14 +1086,14 @@ header {
   header .left {
     display: flex; }
     header .left img {
-      width: 250px; }
+      width: 225px; }
   header .central {
     background-color: #212121;
     display: flex;
     height: 94px;
     position: absolute;
-    top: 31px;
-    left: 290px;
+    top: 0px;
+    left: 250px;
     z-index: 0; }
     header .central h1 {
       height: 100%;
